Fix overflow issue

--- a/stylesheets/body-column.scss
+++ b/stylesheets/body-column.scss
@@ -5,6 +5,7 @@
 }
 #content-body {
   @include transition(margin-left, 0.5s, ease-in-out);
+  overflow-x:hidden;
 
   article.category-politics a {
     color: $politics-color;
